--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="wrapper">
 
         </div>
+        <footer>By Gidenilson Alves Santiago</footer>
     </main>
     <script src="app.js"></script>
     
