--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="wrapper">
 
         </div>
-        <footer>By Gidenilson Alves Santiago</footer>
+        <footer>By Gidenilson Alves Santiago - 2021</footer>
     </main>
     <script src="app.js"></script>
     
